--- a/store/storeStyle.css
+++ b/store/storeStyle.css
@@ -1,5 +1,9 @@
+/* Global styles */
+
 body {
     background-color: #F9FAFE;
+    display: flex;
+    padding: 0 10% 0 10%;
 }
 
 input {
@@ -16,13 +20,41 @@ button {
     margin-top: 30px;
 }
 
+h1{
+    color: #1D2936;
+    font-family: 'lato';
+    font-size: 18px;
+    font-weight: 800;
+    padding: 30px 0px 10px 0px;
+    line-height: 0px;
+}
+
+/* Create product & add to card */
+
 .add-product{
     background-color: white;
     padding: 0px 30px 30px 30px;
     width: 200px;
-    height: 100%;
+    height: 320px;
     justify-content: center;
     border: 1px solid #EDEDED;
+}
+
+.cart{
+    background-color: white;
+    padding: 0px 30px 30px 30px;
+    margin: 0px 0px 0px 20px;
+    width: 200px;
+    height: 320px;
+    border: 1px solid #EDEDED;
+}
+
+.empty-cart {
+    font-size: 12px;
+    font-family: 'lato';
+    font-weight: 400;
+    justify-content: center;
+    color: #A6A6A6;
 }
 
 .title {
@@ -30,8 +62,57 @@ button {
     font-family: 'lato';
     font-weight: 800;
     padding: 20px 0px 0px 0px;
+    color: #A6A6A6;
 }
 
 .disabled {
     opacity: .3;
+}
+
+.actions {
+    display:flex;
+}
+
+.cart-info {
+    font-size: 13px;
+    font-family: 'lato';
+    font-weight: 600;
+    padding: 8px 0px 0px 0px;
+    color: #828B96;
+}
+
+.cart-total {
+    font-size: 16x;
+    font-family: 'lato';
+    font-weight: 800;
+    padding: 10px 0px 0px 0px;
+    color: #1D2936;
+}
+
+.cart-details{
+    padding: 20px 0px 0px 0px;
+}
+
+/* Printing products to DOM */
+
+.product-container {
+    background-color: white;
+    padding: 0px 25px 40px 25px;
+    margin: 0px 0px 20px 20px;
+    width: 200px;
+    border: 1px solid #EDEDED;
+}
+
+.product-name {
+    font-size: 16px;
+    font-family: 'lato';
+    font-weight: 800;
+    padding: 20px 0px 0px 0px;
+}
+
+.product-cost {
+    font-size: 13px;
+    font-family: 'lato';
+    font-weight: 400;
+    padding: 00px 0px 10px 0px;
 }
