updated add to cart feature

--- a/store/storeStyle.css
+++ b/store/storeStyle.css
@@ -103,7 +103,7 @@ h1{
     border: 1px solid #EDEDED;
 }
 
-.product-name {
+.name-product {
     font-size: 16px;
     font-family: 'lato';
     font-weight: 800;
